--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
-dataset/scene.zip filter=lfs diff=lfs merge=lfs -text
-dataset/wolves_and_dogs.zip filter=lfs diff=lfs merge=lfs -text
+weights/*.pt filter=lfs diff=lfs merge=lfs -text
+weights/*.pth filter=lfs diff=lfs merge=lfs -text
+dataset/*.zip filter=lfs diff=lfs merge=lfs -text
